# bsu-nn

./: .gitattributes  .gitignore  pyproject.toml  readme.md
data/inputs/lab6/model/: mnist_best_model.json  mnist_best_model.weights.h5
data/inputs/lab9/data_1b_src/: readme.md
data/inputs/lab9/data_2_src/: Dataset.csv
data/mnist/: mnist_best_model.json  mnist_best_model.weights.h5
data/outputs/lab10/model/: imdb_lstm_model.h5
data/outputs/lab7/model/: cnn_model.json  cnn_model.weights.h5
data/outputs/lab9/model/: imdb_lstm_model.h5  resnet34_faces.pth  vgg16_cats_dogs.h5  vgg16_vehicles.h5
src/lab1/: 1.ipynb
src/lab10/: colab.ipynb  locally.ipynb  readme.md
src/lab2/: 1.py  2.py  3.py  4.py  5.py  6.py
src/lab3/: 1_1.py  1_2.py  1_3.py  2_1.py  3_1.py  3_2.py
src/lab4/: 1.py  2.py  xor_lin.py  xor_nonlin.py
src/lab5/: 1.ipynb  mnist_best_model.json  mnist_best_model.weights.h5  mnist_model.json  mnist_model.weights.h5
src/lab6/: 1.ipynb
src/lab7/: 1.ipynb
src/lab8/: 1.ipynb
src/lab9/: 1.ipynb  2.ipynb
utils/: mnist.py  settings.py
